<resources>
    <string name="app_name">Calculate Me</string>

    <string name="mc">MC</string>
    <string name="mp">M+</string>
    <string name="mm">M-</string>
    <string name="mr">MR</string>
    <string name="clear">C</string>
    <string name="del">Del</string>

    <string name="div">\u00F7</string>
    <string name="squr">n&#178;</string>
    <string name="mult">\u00D7</string>
    <string name="plus">+</string>
    <string name="min">-</string>
    <string name="equals">=</string>
    <string name="plusMinus">&#177;</string>
    <string name="decimal">.</string>
    <string name="negative">+/-</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="doubleZero">00</string>


    <string name="historyHint">History</string>
    <string name="mainTextHint">0</string>
    <string name="negSign">-</string>


</resources>
