<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cryptonym0.calculateme.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/history"
        android:layout_weight="1"
        android:hint="@string/historyHint"
        android:gravity="center_horizontal|end"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInput"
        android:layout_weight="1"
        android:gravity="end"
        android:textSize="40sp"
        android:hint="@string/mainTextHint" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:weightSum="5">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/divr"
            android:id="@+id/btnDivRem"
            android:layout_weight="1"
            android:textSize="25sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mc"
            android:id="@+id/btnMemClear"
            android:layout_weight="1"
            android:textSize="25sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mp"
            android:id="@+id/btnMemPlus"
            android:layout_weight="1"
            android:textSize="25sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mm"
            android:id="@+id/btnMemMin"
            android:layout_weight="1"
            android:textSize="25sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mr"
            android:id="@+id/btnMemReg"
            android:layout_weight="1"
            android:textSize="25sp"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/clear"
            android:id="@+id/btnClear"
            android:layout_weight="1"
            android:textSize="25sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/del"
            android:id="@+id/btnDelete"
            android:layout_weight="1"
            android:textSize="25sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/div"
            android:id="@+id/btnDivide"
            android:layout_weight="1"
            android:textSize="25sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mult"
            android:id="@+id/btnMultiply"
            android:layout_weight="1"
            android:textSize="25sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/seven"
            android:id="@+id/btn7"
            android:layout_weight="1"
            android:textSize="25sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/eight"
            android:id="@+id/btn8"
            android:layout_weight="1"
            android:textSize="25sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nine"
            android:id="@+id/btn9"
            android:layout_weight="1"
            android:textSize="25sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/min"
            android:id="@+id/btnMinus"
            android:layout_weight="1"
            android:textSize="25sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/four"
            android:id="@+id/btn4"
            android:layout_weight="1"
            android:textSize="25sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/five"
            android:id="@+id/btn5"
            android:layout_weight="1"
            android:textSize="25sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/six"
            android:id="@+id/btn6"
            android:layout_weight="1"
            android:textSize="25sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/plus"
            android:id="@+id/btnPlus"
            android:layout_weight="1"
            android:textSize="25sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/one"
            android:id="@+id/btn1"
            android:layout_weight="1"
            android:textSize="25sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/two"
            android:id="@+id/btn2"
            android:layout_weight="1"
            android:textSize="25sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/three"
            android:id="@+id/btn3"
            android:layout_weight="1"
            android:textSize="25sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="&#177;"
            android:id="@+id/btnPlusMinus"
            android:layout_weight="1"
            android:textSize="25sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/zero"
            android:id="@+id/btn0"
            android:layout_weight="1"
            android:textSize="25sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/decimal"
            android:id="@+id/btnDecimal"
            android:layout_weight="1"
            android:textSize="25sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/doubleZero"
            android:id="@+id/btn00"
            android:layout_weight="1"
            android:textSize="25sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/equals"
            android:id="@+id/btnEquals"
            android:layout_weight="1"
            android:textSize="25sp"/>

    </LinearLayout>

</LinearLayout>
